.k8s/bts-worker.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bts-worker
  labels:
    app: bts-worker
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: bts-worker
    spec:
      containers:
        - name: bts-worker
          image: 4xor/bts:0.1.1
          imagePullPolicy: Always
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
                    "-instances=bts4xor:europe-west2:production=tcp:5432",
                    "-credential_file=/secrets/cloudsql/credentials.json"]
          # [START cloudsql_security_context]
          securityContext:
            runAsUser: 2  # non-root user
            allowPrivilegeEscalation: false
          # [END cloudsql_security_context]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
        # [END proxy_container]
      # [START volumes]
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
      # [END volumes]
