.k8s/bts-admin.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bts-admin
  labels:
    app: bts-admin
spec:
  template:
    metadata:
      labels:
        app: bts-admin
    spec:
      containers:
        - name: bts-admin
          image: 4xor/bts:nightly
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              hostPort: 8081
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
                    "-instances=bts4xor:europe-west2:production=tcp:5432",
                    "-credential_file=/secrets/cloudsql/credentials.json"]
          # [START cloudsql_security_context]
          securityContext:
            runAsUser: 2  # non-root user
            allowPrivilegeEscalation: false
          # [END cloudsql_security_context]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
        # [END proxy_container]
      # [START volumes]
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
      # [END volumes]
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "bts-admin-service"
  namespace: "default"
  labels:
    app: "bts-admin"
spec:
  ports:
    - protocol: "TCP"
      port: 8081
  selector:
    app: "bts-admin"
  type: "NodePort"
