.k8s/bts-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
spec:
  rules:
    - host: bts.4xor.io
      http:
        paths:
          - backend:
              serviceName: bts-admin-service
              servicePort: 8081
            path: /admin
          - backend:
              serviceName: bts-admin-service
              servicePort: 8081
            path: /admin/*
          - backend:
              serviceName: bts-admin-service
              servicePort: 8081
            path: /api/admin/*
          - backend:
              serviceName: bts-web-service
              servicePort: 8080
            path: /
          - backend:
              serviceName: bts-web-service
              servicePort: 8080
            path: /*
  tls:
    - secretName: bts-dot-4xor-dot-tls
      hosts:
        - bts.4xor.io
